--- a/seminar1/seminar1.ipynb
+++ b/seminar1/seminar1.ipynb
@@ -7,7 +7,8 @@
       "name": "seminar1 template.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -31,18 +32,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4l9V3olpo6Et"
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dl-ub-summer-school/2021/blob/main/seminar1/seminar1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OzhPvfKvpOJk"
       },
       "source": [
         "<table class=\"buttons\" align=\"center\">\n",
         "    <td>\n",
-        "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/dl-ub-summer-school/2019/blob/master/seminar1.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Google Colab дээр нээх</a>\n",
+        "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/dl-ub-summer-school/2021/blob/master/seminar1/seminar1.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Google Colab дээр нээх</a>\n",
         "    </td>\n",
         "    <td>\n",
-        "        <a target=\"_blank\" href=\"https://github.com/dl-ub-summer-school/2019/blob/master/seminar1.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />GitHub дээр нээх</a>\n",
+        "        <a target=\"_blank\" href=\"https://github.com/dl-ub-summer-school/2021/blob/master/seminar1/seminar1.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />GitHub дээр нээх</a>\n",
         "    </td>\n",
         "    <td>\n",
-        "        <a target=\"_blank\" href=\"https://sites.google.com/view/dlub/dl-ub-2019\"><img src=\"https://avatars0.githubusercontent.com/u/52651086?s=32&v=4\">Зуны сургалтын вебсайт</a>\n",
+        "        <a target=\"_blank\" href=\"https://sites.google.com/view/dlub\"><img src=\"https://avatars0.githubusercontent.com/u/52651086?s=32&v=4\">Зуны сургалтын вебсайт</a>\n",
         "    </td>\n",
         "</table>"
       ]
