--- a/seminar2/seminar2.ipynb
+++ b/seminar2/seminar2.ipynb
@@ -46,13 +46,13 @@
         "## Индекс нөтбүк\n",
         "<table class=\"buttons\" align=\"left\">\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/dl-ub-summer-school/2019/blob/master/seminar2.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Google Colab дээр нээх</a>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/dl-ub-summer-school/2021/blob/main/seminar2/seminar2.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Google Colab дээр нээх</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "    <a target=\"_blank\" href=\"https://github.com/dl-ub-summer-school/2019/blob/master/seminar2.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />GitHub дээр нээх</a>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/dl-ub-summer-school/2021/blob/main/seminar2/seminar2.ipynb\"><img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />GitHub дээр нээх</a>\n",
         "  </td>\n",
         "  <td>\n",
-        "       <a target=\"_blank\" href=\"https://sites.google.com/view/dlub/dl-ub-2019\"><img src=\"https://avatars0.githubusercontent.com/u/52651086?s=32&v=4\">Зуны сургалтын вебсайт</a>\n",
+        "       <a target=\"_blank\" href=\"https://sites.google.com/view/dlub\"><img src=\"https://avatars0.githubusercontent.com/u/52651086?s=32&v=4\">Зуны сургалтын вебсайт</a>\n",
         "   </td>\n",
         "</table>"
       ]
