--- a/DLUB_Seminar4_CNN.ipynb
+++ b/DLUB_Seminar4_CNN.ipynb
@@ -6,7 +6,7 @@
       "name": "DLUB_Seminar4_CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFVcqsphbZFg8MeLAK5fFO",
+      "authorship_tag": "ABX9TyM4v+5rZVzskD7Q4x3yNKuC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2131,6 +2131,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nm528TPvhQV2"
+      },
+      "source": [
+        "<img src=\"https://miro.medium.com/max/398/1*ulvZu4-sgPd8SLAAdaiwWw.png\" width=600>"
+      ]
     },
     {
       "cell_type": "code",
